--- a/0xXOC-Frontend/index.html
+++ b/0xXOC-Frontend/index.html
@@ -2,17 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/0xXOC-logo/logo 0xXOC.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MictlAI</title>
-    <meta name="description" content="Bridging Worlds Beyond Time - AI-powered multichain bridge for atomic swaps between Base and Arbitrum" />
-    <!-- Preload fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <!-- Favicon -->
-    <link rel="icon" href="/favicon.ico" />
+    <title>0xXOC - P2P $MXN-$USDC $MXNe $XOC Marketplace</title>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   </head>
-  <body class="font-body bg-white dark:bg-slate-900 text-slate-900 dark:text-white">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
